k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: llm-status-ingress
  namespace: deep-point-process
spec:
  rules:
  - host: llm-status.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: llm-status-service
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - llm-status.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: llm-status-service
  namespace: deep-point-process
  labels:
    app: nautilus-llm-status
spec:
  selector:
    app: nautilus-llm-status
  ports:
  - name: http
    protocol: TCP
    port: 8080
